cmake_minimum_required(VERSION 3.26)
project(LinkedList)

set(CMAKE_CXX_STANDARD 17)

add_executable(LinkedList
        "19. Remove Nth Node From End of List.cpp"
        "21. Merge Two Sorted Lists.cpp"
        "203. Remove Linked List Elements.cpp"
        "234. Palindrome Linked List.cpp"
        "234. Palindrome Linked List.cpp"
        "705. Design HashSet.cpp")
